feat: 좌석 선점 및 상태 관리 로직 구현